left fancy scrollbars but fixed css of Card

--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -26,7 +26,7 @@
 	display: flex;
 	flex-direction: column;
 	color: white;
-	font-family: Comic Sans MS, Arial, sans, sans-serif;
+	font-family: 'Comic Sans MS', 'Arial', 'sans', 'sans-serif';
 	justify-content: center;
 	align-items: center;
 	height: 38px;
@@ -60,12 +60,12 @@
   width: 100%;
   height: 100%;
   text-align: center;
-  transition: transform 0.1s;
+  transition: all 0.1s ease;
   transform-style: preserve-3d;
 }
  /*Do an horizontal flip when you move the mouse over the flip box container */
 .imgContainer:hover .flip-card-inner {
-  transition: transform 0.8s;
+  transition: all 0.8s ease-in-out;
   transform: rotateY(180deg);
 }
  /*Position the front and back side */
@@ -96,7 +96,7 @@
 	height: 100%;
 	width: 100%;
 	background-color: #808080;
-	transition: transform 0.4s;
+	transition: all 0.4s ease-in-out;
   transform: rotateY(180deg);
 }
 
@@ -106,8 +106,8 @@
 	outline: none;
 }
 
-.growCard { transition: all .2s ease-in-out; }
-.growCard:hover { transform: scale(1.1);}
+/* .growCard { transition: all .2s ease-in-out; }
+.growCard:hover { transform: scale(1.1);} */
 
 .tooltip {
   position: relative;
@@ -172,6 +172,10 @@
 	align-items: center;
 	color: #ff69b4;
 	text-align: justify;
+}
+
+@media screen and (max-width: 500px) {
+
 }
 
 @media screen and (max-width: 500px) {
