--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -42,25 +42,25 @@ h1{
 	overflow-x: hidden;
 }
 /* width */
-/* ::-webkit-scrollbar {
+::-webkit-scrollbar {
   width: 20px;
-} */
+}
 
 /* Track */
-/* ::-webkit-scrollbar-track {
+::-webkit-scrollbar-track {
   box-shadow: inset 0 0 5px grey; 
   border-radius: 10px;
-} */
+}
  
 /* Handle */
-/* ::-webkit-scrollbar-thumb {
+::-webkit-scrollbar-thumb {
     border-radius: 10px;
     background: -moz-linear-gradient(45deg, rgba(255,0,223,1) 0%, rgba(255,255,0,1) 100%);
     background: -webkit-linear-gradient(45deg, rgba(255,0,223,1) 0%, rgba(255,255,0,1) 100%);
     background: -o-linear-gradient(45deg, rgba(255,0,223,1) 0%, rgba(255,255,0,1) 100%);
     background: -ms-linear-gradient(45deg, rgba(255,0,223,1) 0%, rgba(255,255,0,1) 100%);
     background: linear-gradient(45deg, rgba(255,0,223,1) 0%, rgba(255,255,0,1) 100%);
-} */
+}
 @media screen and (max-width: 1200px) {
 	.mainContainer {
 		grid-template-columns: 1;
